--- a/home-manager/hyprland/waybar/config.jsonc
+++ b/home-manager/hyprland/waybar/config.jsonc
@@ -20,7 +20,7 @@
 
     "modules-right": [
         "pulseaudio",
-	"bluetooth",
+	    "bluetooth",
         "network",
    //     "cpu",
    //     "memory",
@@ -124,7 +124,7 @@
     "bluetooth": {
 	"format": "",
 	"format-connected": "",
-	"on-click": "kitty bluetui",
+	"on-click": "kitty bluetoothctl",
 	"tooltip-format": "{controller_alias}\t{controller_address}",
 	"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
 	"tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
