--- a/home-manager/hyprland/hypr/hyprland.conf
+++ b/home-manager/hyprland/hypr/hyprland.conf
@@ -35,6 +35,7 @@ $browser = firefox
 #################
 
  exec-once = waybar
+ exec-once = hyprctl setcursor Adwaita 24
 
 
 #############################
@@ -43,8 +44,8 @@ $browser = firefox
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
 
 
 #####################
