hyprpaper works, plus script to change conservation mode for battery

--- a/home-manager/hyprland/hypr/hyprland.conf
+++ b/home-manager/hyprland/hypr/hyprland.conf
@@ -35,7 +35,10 @@ $browser = firefox
 #################
 
  exec-once = waybar
+ exec-once = mako
  exec-once = hyprctl setcursor Adwaita 24
+ exec-once = hyprpolkitagent
+ exec-once = hyprpaper
 
 
 #############################
