--- a/home-manager/hyprland/waybar/config.jsonc
+++ b/home-manager/hyprland/waybar/config.jsonc
@@ -2,131 +2,103 @@
 {
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
-    "spacing": 4, // Gaps between modules (4px)
-    
-
-// Choose the order of the modules
+    "height": 30, // Waybar height
+    "spacing": 4, // Gaps between modules
+  
+    // Order of modules
     "modules-left": [
-        "hyprland/workspaces"
-        ],
-
-	
-"modules-center": [
-        //"hyprland/window"
-        "clock"
+      "hyprland/workspaces"
     ],
-
-
+  
+    "modules-center": [
+      "clock"
+    ],
+  
     "modules-right": [
-        "pulseaudio",
-	    "bluetooth",
-        "network",
-   //     "cpu",
-   //     "memory",
-   //     "temperature",
-        "backlight",
-        "battery"
+      "pulseaudio",
+      "bluetooth",
+      "network",
+      "backlight",
+      "battery",
+      "custom/charge-toggle"
     ],
-    
-//    Modules configuration
+  
+    // Modules configuration
     "hyprland/workspaces": {
-    "disable-scroll": true,
-       "all-outputs": true,
-       "warp-on-scroll": false,
-     "format": "{name}: {icon}",
-       "format-icons": {
-             "urgent": "",
-             "active": "",
-             "default": ""
-         }
-     },
-     "clock": {
-        // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+      "disable-scroll": true,
+      "all-outputs": true,
+      "warp-on-scroll": false,
+      "format": "{name}: {icon}",
+      "format-icons": {
+        "urgent": "",
+        "active": "",
+        "default": ""
+      }
     },
-
-
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
+  
+    "clock": {
+      "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
-
-
-    "memory": {
-        "format": "{}% "
-    },
-
-
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
-    },
-
-
+  
     "backlight": {
-        "device": "",
-        "format": "{percent}% {icon}",
-        "format-icons": ["","", "", ""],
-        "on-scroll-down": "brightnessctl set 5%-",
-        "on-scroll-up": "brightnessctl set +5%"
+      "device": "",
+      "format": "{percent}% {icon}",
+      "format-icons": ["", "", "", ""],
+      "on-scroll-down": "brightnessctl set 5%-",
+      "on-scroll-up": "brightnessctl set +5%"
     },
-
-
+  
     "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        "format-full": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+      "states": {
+        "warning": 30,
+        "critical": 15
+      },
+      "format": "{capacity}% {icon}",
+      "format-full": "{capacity}% {icon}",
+      "format-charging": "{capacity}% ",
+      "format-plugged": "{capacity}% ",
+      "format-alt": "{time} {icon}",
+      "format-icons": ["", "", "", "", ""],
+      "on-click": "~/.config/waybar/toggle-charge.sh"
     },
-
-
-
+  
+    // "custom/charge-toggle": {
+    //   "format": "⚡",
+    //   "tooltip": "Toggle Battery Conservation Mode (60% / 100%)",
+    //   "on-click": "~/.config/waybar/toggle-charge.sh",
+    //   "interval": 0
+    // },
+  
     "network": {
-	"on-click": "kitty nmtui",
-        "format-wifi": "({signalStrength}%) ",
-        "format-ethernet": "",
-        "format-disconnected": "⚠"
+      "on-click": "kitty nmtui",
+      "format-wifi": "({signalStrength}%) ",
+      "format-ethernet": "",
+      "format-disconnected": "⚠"
     },
-
-
+  
     "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} ",
-        "format-bluetooth": "{volume}% {icon} ",
-        "format-muted": " {format_source}",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        },
-        "on-click": "pavucontrol"
+      "format": "{volume}% {icon} ",
+      "format-bluetooth": "{volume}% {icon} ",
+      "format-muted": " {format_source}",
+      "format-icons": {
+        "headphone": "",
+        "hands-free": "",
+        "headset": "",
+        "phone": "",
+        "portable": "",
+        "car": "",
+        "default": ["", "", ""]
+      },
+      "on-click": "kitty pulsemixer"
     },
-
+  
     "bluetooth": {
-	"format": "",
-	"format-connected": "",
-	"on-click": "kitty bluetoothctl",
-	"tooltip-format": "{controller_alias}\t{controller_address}",
-	"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
-	"tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
+      "format": "",
+      "format-connected": "",
+      "on-click": "kitty bluetui",
+      "tooltip-format": "{controller_alias}\t{controller_address}",
+      "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+      "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
     }
 }
+  
