--- a/home-manager/hyprland/hypr/hyprland.conf
+++ b/home-manager/hyprland/hypr/hyprland.conf
@@ -77,10 +77,7 @@ general {
     layout = dwindle
 }
 
-misc {
-    disable_splash_rendering = true
-    disable_hyprland_logo = true
-}
+
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 5
@@ -160,8 +157,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -214,7 +211,10 @@ bind = $mainMod, F, exec, $browser
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, J, togglesplit, # dwindlei
+
+bind = , F8, exec, sh -c 'file=~/Pictures/Screenshot/screenshot_$(date +%s).png; grim -g "$(slurp)" "$file" && notify-send "📸 Screenshot saved!" "$file"'
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
