--- a/home-manager/hyprland/hypr/hyprland.conf
+++ b/home-manager/hyprland/hypr/hyprland.conf
@@ -15,7 +15,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1 ,1920x1200@60.00Hz ,auto, 1
 
 
 ###################
